tests/inputs/valid/map-08.js
const map = [
    ['','','+','B','C','-','-','-','+'],
    ['','','|','','','','','','|'],
    ['','','|','','+','Y','+','','|'],
    ['','','|','','X','','Z','','|'],
    ['x','','+','-','|','-','+','','D'],
    ['|','','','','|','','','','|'],
    ['+','-','-','-','|','-','-','-','+'],
    ['','','','','|','','','',''],
    ['','','','','@','','','',''],
];

module.exports = map;
