tests/inputs/invalid/map-05.js
const map = [
    ['@','-','-','A','-','+'],
    ['','','','','','x'],
    ['','','','',''],
    ['','','','','','B','-','x'],
];

module.exports = map;
